[tool.poetry]
name = "sqlalchemy-python-docker"
version = "0.1.0"
description = ""
authors = ["Connor Stabnick <cstabnick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
SQLAlchemy = "^2.0.25"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
